# teajs

./: CMakeLists.txt  INSTALL  Makefile  README  VERSION  build-tea.py  build-v8.sh  linker.sh  make-release.sh  teajs.conf.tmpl  teajs.pod  test.sh
.github/workflows/: github-actions-demo.yml
apache2/mods-available/: teajs.conf  teajs.load
example/: active_record.js  eventloop.js  example.js  server.js  shell.js  websocket.js  wwwclient.js
example/OpenGL/: example1.js  example2.js
example/OpenGL/gles/: ch2-hello-triangle.js  ch8-simple-vertexshader.js  ch9-simple-texture-cubemap.js  ch9-simple-texture2d.js  metatunnel-3d.js
example/OpenGL/gles/shaders/: ch9-fshader.sl  ch9-texture2d-fshader.sl  ch9-texture2d-vshader.sl  ch9-vshader.sl
lib/: Jst.js  active_record.js  assert.js  base64.js  binary-b.js  binary.js  bufferpack.js  dom.js  eventloop.js  exif.js  exif.js.old  getopt.js  hash.js  html.js  http.js  js.js  jsonRpcHandler.js  mail.js  query.js  redis.js  session.js  sphinxapi.js  sprintf.js  template.js  test.js  websocket.js
logo/: README
src/: app.cc  app.h  cache.cc  cache.h  common.cc  common.h  gc.cc  gc.h  macros.h  mod_teajs.cc  path.cc  path.h  system.cc  system.h  teajs.cc
src/lib/GL/: GL.cc  GL.hpp
src/lib/GL/glbindings/: glbind.cpp  glbind.h  glbind.json  glbind.py  make_json.py
src/lib/GL/glesbindings/: gl2.h  gles_desktop_shim.h  glesbind.cpp  glesbind.h  glesbind.json  glesbind.py  glescustom.cpp  glew_desktop_shim.h  make_json.py
src/lib/GL/glubindings/: glu.h  glubind.cpp  glubind.h  glubind.py
src/lib/GL/glutbindings/: glut.h  glutInit.template  glutTimerFunc.template  glutbind.cpp  glutbind.h  glutbind.py
src/lib/archivers/: archiver.cc  archiverBase.h  archiverZip.cc  archiverZip.h
src/lib/binary/: binary.cc  bytestorage.cc  bytestorage.h
src/lib/binary-b/: binary-b.cc  binary-b.h  bytearray.cc  bytearray.h  bytestorage-b.cc  bytestorage-b.h  bytestring.cc  bytestring.h
src/lib/curses/: curses.cc
src/lib/fibers/: fibers.cc
src/lib/fs/: fs.cc
src/lib/gd/: gd.cc
src/lib/memcached/: memcached.cc
src/lib/mysql/: mysql.cc
src/lib/pgsql/: pgsql.cc
src/lib/process/: process.cc
src/lib/socket/: socket.cc
src/lib/sqlite/: sqlite.cc
src/lib/tls/: tls.cc
src/lib/xdom/: xdom.cc  xdom.hpp
src/lib/zlib/: zlib.cc
unit/: helloworld.js  missing_require.js  oom.js  runner.js  syntax_error.js  throw.js
unit/optional/: pgsql.js  sqlite.js
unit/tests/: archiver.js  assert.js  base64.js  binary.js  curses.js  dom.js  example-exec.js  exec3.js  exif.js  fs.js  fs_tell_seek.js  gc.js  gd.js  getopt.js  hash.js  hmac.js  html.js  http_client_request.js  http_client_request_longest.js  http_client_request_multipart.js  js.js  open3.js  pgsql.js  require.js  rsa.js  template.js  zlib.js
unit/tests/require/: a.js  b.js
unit/tests/texts/: call  short-file.txt  very-long-file.txt
